--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, intial-scale=1">
-        <title>Practice</title>
+        <title>PORTFOLIO</title>
 
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <script type="text/javascript" src="js/popper.min.js"></script>
@@ -31,7 +31,7 @@
             <div class="navbar-collapse">
                
               <div class="card bg" >
-                <img src="IMG/psp.jpeg" class="card-img-top profile_img " alt="...">
+                <img src="img/psp.jpeg" class="card-img-top profile_img " alt="...">
                 <div class="card-body">
                   <h3>Pravin Patil</h3>
 
@@ -144,7 +144,7 @@
         
       <div class="row about_row">
         <div class="col-12 col-lg-4 about_col   " >
-            <img src="IMG/pravin.jpeg" class="img-fluid" alt="">
+            <img src="img/pravin.jpeg" class="img-fluid" alt="">
         </div>
         <div class=" col-12 col-lg-8 about_col">
             <h3>UI/UX Designer & Web Developer.</h3>
